syntax = "proto3";

package trading_bot;

import "google/protobuf/timestamp.proto";

// API Key management
message ApiKey {
  uint32 id = 1;
  string provider = 2;
  string api_key = 3;
  string environment = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
}

// Asset information
message Asset {
  uint32 id = 1;
  string symbol = 2;
  string name = 3;
  string asset_class = 4;
  string exchange = 5;
  bool is_tradable = 6;
  double last_price = 7;
  google.protobuf.Timestamp created_at = 8;
}

// Trade execution
message Trade {
  uint32 id = 1;
  string asset_symbol = 2;
  string side = 3; // buy/sell
  double quantity = 4;
  double price = 5;
  double total_value = 6;
  google.protobuf.Timestamp trade_time = 7;
}

// Ollama AI response
message OllamaReceipt {
  uint32 id = 1;
  string model = 2;
  string prompt = 3;
  string response = 4;
  bool success = 5;
  google.protobuf.Timestamp created_at = 6;
}

// Market regime analysis
message MarketRegimeAnalysis {
  uint32 id = 1;
  string market_regime = 2;
  double confidence_level = 3;
  google.protobuf.Timestamp analysis_time = 4;
}

// Strategy recommendation
message StrategyRecommendation {
  uint32 id = 1;
  string asset_symbol = 2;
  string action = 3;
  double target_price = 4;
  double confidence_score = 5;
  google.protobuf.Timestamp created_at = 6;
}

// Execution signal
message ExecutionSignal {
  uint32 id = 1;
  string signal_type = 2;
  string asset_symbol = 3;
  double strength = 4;
  bool is_triggered = 5;
  google.protobuf.Timestamp created_at = 6;
}

// Portfolio snapshot
message PortfolioSnapshot {
  uint32 id = 1;
  double total_value = 2;
  double cash_balance = 3;
  double portfolio_value = 4;
  google.protobuf.Timestamp snapshot_time = 5;
}

// Main trading data container
message TradingData {
  repeated ApiKey api_keys = 1;
  repeated Asset assets = 2;
  repeated Trade trades = 3;
  repeated OllamaReceipt ollama_receipts = 4;
  repeated MarketRegimeAnalysis market_regime_analyses = 5;
  repeated StrategyRecommendation strategy_recommendations = 6;
  repeated ExecutionSignal execution_signals = 7;
  repeated PortfolioSnapshot portfolio_snapshots = 8;
  google.protobuf.Timestamp last_updated = 9;
  string version = 10;
}
